force-app/main/default/objects/jst_Metadata_Item__c/jst_Metadata_Item__c.object-meta.xml
<CustomObject>
    <description>Representation of a metadata item to help reporting for depencies</description>
    <label>AWB - Metadata Item</label>
    <nameField>
        <displayFormat>MD-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AWB - Metadata Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>