force-app/main/default/objects/jst_Metadata_Item__c/fields/MetadataComponentId__c.field-meta.xml
<CustomField>
    <fullName>MetadataComponentId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>MetadataComponentId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>