force-app/main/default/objects/jst_Metadata_Item__c/fields/MetadataComponentName__c.field-meta.xml
<CustomField>
    <fullName>MetadataComponentName__c</fullName>
    <label>MetadataComponentName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>