force-app/main/default/objects/jst_Metadata_Item__c/fields/MetadataComponentNamespace__c.field-meta.xml
<CustomField>
    <fullName>MetadataComponentNamespace__c</fullName>
    <label>MetadataComponentNamespace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>