force-app/main/default/objects/jst_Metadata_Item__c/fields/MetadataComponentType__c.field-meta.xml
<CustomField>
    <fullName>MetadataComponentType__c</fullName>
    <label>MetadataComponentType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>