force-app/main/default/objects/jst_Metadata_Item__c/fields/Number_of_metadata_references__c.field-meta.xml
<CustomField>
    <fullName>Number_of_metadata_references__c</fullName>
    <label>Number of metadata references</label>
    <summaryForeignKey>jst_Metadata_Item_Reference__c.Metadata_Item__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>