force-app/main/default/objects/jst_Metadata_Item__c/fields/Parent_Metadata_Item__c.field-meta.xml
<CustomField>
    <fullName>Parent_Metadata_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The parent is used for linking custom objects to custom fields</description>
    <label>Parent Metadata Item</label>
    <referenceTo>jst_Metadata_Item__c</referenceTo>
    <relationshipLabel>Child - Metadata Items</relationshipLabel>
    <relationshipName>AWB_Metadata_Items</relationshipName>
    <type>Lookup</type>
</CustomField>