force-app/main/default/objects/jst_Metadata_Item__c/fields/Parent_Metadata_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Metadata_Name__c</fullName>
    <formula>Parent_Metadata_Item__r.MetadataComponentName__c</formula>
    <label>Parent Metadata Name</label>
    <type>Text</type>
</CustomField>