force-app/main/default/objects/jst_Metadata_Item__c/fields/Parent_Metadata_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Metadata_Type__c</fullName>
    <formula>Parent_Metadata_Item__r.MetadataComponentType__c</formula>
    <label>Parent Metadata Type</label>
    <type>Text</type>
</CustomField>