force-app/main/default/objects/jst_Metadata_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MetadataComponentType__c</columns>
    <columns>MetadataComponentNamespace__c</columns>
    <columns>MetadataComponentName__c</columns>
    <columns>Number_of_metadata_references__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MetadataComponentType__c</field>
        <operation>equals</operation>
        <value>CustomField</value>
    </filters>
    <label>All</label>
</ListView>