force-app/main/default/objects/jst_Metadata_Item__c/listViews/AuraDefinitionBundle.listView-meta.xml
<ListView>
     <fullName>AuraDefinitionBundle</fullName>
        <columns>NAME</columns>
        <columns>MetadataComponentId__c</columns>
        <columns>MetadataComponentType__c</columns>
        <columns>MetadataComponentNamespace__c</columns>
        <columns>MetadataComponentName__c</columns>
        <columns>Number_of_metadata_references__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MetadataComponentType__c</field>
            <operation>equals</operation>
            <value>AuraDefinitionBundle</value>
        </filters>
        <label>AuraDefinitionBundle</label>
</ListView>