force-app/main/default/objects/jst_Metadata_Item__c/listViews/CustomField.listView-meta.xml
<ListView>
    <fullName>CustomField</fullName>
        <columns>NAME</columns>
        <columns>MetadataComponentId__c</columns>
        <columns>MetadataComponentType__c</columns>
        <columns>MetadataComponentNamespace__c</columns>
        <columns>MetadataComponentName__c</columns>
        <columns>Number_of_metadata_references__c</columns>
        <columns>Parent_Metadata_Item__c</columns>
        <columns>Parent_Metadata_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MetadataComponentType__c</field>
            <operation>equals</operation>
            <value>CustomField</value>
        </filters>
        <label>CustomField</label>
</ListView>